fix: Mayor fix wich includes a stabilization mechanism to collect orientation data.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -51,7 +51,7 @@
     <string name="button_one_leg_test">Unipodal</string>
     <string name="button_quality">Cálidad de datos </string>
     <string name="button_repeat">Repetir prueba</string>
-    <string name="button_restart">Reaunudar</string>
+    <string name="button_restart">Reanudar</string>
     <string name="button_restore">[ Resablecer contraseña ]</string>
     <string name="button_save">Guardar</string>
     <string name="button_semi_tandem_test">Semi-tándem</string>
