--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -242,5 +242,7 @@
     <string name="about_description_button">Descripción</string>
     <string name="account_no_activated" >La cuenta se encuentra inactiva. Por favor, ingrese a la sección ACTIVAR CUENTA para más información.</string>
     <string name="upload_description_fiware">Archivos almacenados (fiware) desde:</string>
-    <string name="storing">Almacenando datos ...</string>
+    <string name="storing">Revisando y almacenando datos.</string>
+    <string name="storing_warning">Mantenga el dispositivo sobre una superficie plana hasta que finalice el proceso.</string>
+    <string name="button_edit">Editar</string>
 </resources>
